--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,24 @@ body{
     border-radius: 5px;
     background: rgb(253, 110, 10);
 }
+.btn-secondary{
+    font-size: 20px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    border: 2px solid rgb(253, 110, 10);
+    width: 150px;
+    height: 64px;
+    margin-left: 30px;
+    border-radius: 5px;
+    background: #FFF8F3;
+}
+
+
+.btn-s{
+    text-decoration: none;
+    font-size: 20px;
+    color: aliceblue;
+}
 .section-title{
     font-size: 35px;
     font-weight: bold;
@@ -167,4 +185,88 @@ main section{
 .sec-des{
     padding: 0 50px;
     margin-bottom: 50px;
+}
+/* resume Section Style  */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience-title{
+    color: rgb(71, 71, 71);
+    font-size: 25px;
+}
+.experience-sub-title{
+    color: rgb(117, 117, 117);
+font-family: Open Sans;
+font-size: 20px;
+}
+.resume-column-title{
+    font-size: 30px;
+    
+}
+.experience-subtitle{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience-description, .experience-subtitle {
+    color: #757575;
+
+}
+.experience-description{
+    font-size: 16px;
+
+
+}
+
+.resume hr{
+    margin: 30px 5px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+
+/* Footer Style  */
+.footer-top {
+    display: flex;
+    background: #fff8f3;
+    padding: 130px 200px;
+    margin-top: 100px;
+    border-radius: 10px;
+ }
+ .footer-column {
+  width: 50%;
+  
+ }
+ #footer-left {
+  padding-right: 15%;
+  
+ }
+.footer-title{
+  text-align: left;
+  
+}
+ .contact input, textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 45px;
+    color: #757575;
+    border-radius: 5px;
+    border: 0;
+    width: 100%;
+
+ }
+
+ .social-links{
+      display: flex;
+      gap: 20px;
+      margin-top: 30px;
+ }
+.footer-copy-right{
+  background: #FFF8F3;
+  color: #141414;
+  text-align: center;
+  padding: 30px 0;
+  margin: auto;
+  border-radius: 10px;
 }
